--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js --exec babel-node",
+    "start": "babel-node app.js",
+    "linter": "eslint . --fix",
+    "test": "jest tests/"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,18 @@
   "bugs": {
     "url": "https://github.com/christiansaiki/stock_exchange/issues"
   },
-  "homepage": "https://github.com/christiansaiki/stock_exchange#readme"
+  "homepage": "https://github.com/christiansaiki/stock_exchange#readme",
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "fastify": "^1.9.0",
+    "mongoose": "^5.2.7"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
+    "jest": "^23.4.0",
+    "nodemon": "^1.17.5"
+  }
 }
