--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "fastify": "^1.9.0",
-    "mongoose": "^5.2.7"
+    "mongoose": "^5.2.7",
+    "pino": "^5.0.1",
+    "pino-pretty": "^2.0.1",
+    "pino-tee": "^0.2.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
