--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "jest": "^23.4.0",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "sinon": "^6.1.5"
   }
 }
